fix backgrounds not covering

--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -164,10 +164,6 @@ h3 {
 @media (max-width: 980px) {
     .content-splash {
         height: 40vh;
-        -moz-background-size: auto 40vh;
-        -o-background-size: auto 40vh;
-        -webkit-background-size: auto 40vh;
-        background-size: auto 40vh;
     }
 
     .splash-info {
